Create component  - Modal

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <div class="container-fluid">
       <div class="login">
         <nav class="login__nav">
-          <button type="button" class="btn btn__sign-in">Sign in</button>
-          <button type="button" class="btn btn__sign-up">Sign up</button>
+          <button id="btnSignin" type="button" class="btn btn__sign-in">Sign in</button>
+          <button id="btnSignup" type="button" class="btn btn__sign-up">Sign up</button>
         </nav>
 
-        <div id="modalSigin" class="modal">
+        <div id="modalSignin" class="modal">
           <div class="modal__dialog">
             <form class="login-form login-form__signin" action="/" method="post">
               <div class="form-group">
