Fixed Btn - signup

--- a/index.html
+++ b/index.html
@@ -50,8 +50,12 @@
                 <input type="email" name="email" placeholder="email">
               </div>
               <div class="form-group">
-                <label>Your Password:</label>
+                <label>Your password:</label>
                 <input type="password" name="password" placeholder="password">
+              </div>
+              <div class="form-group">
+                <label>Repeat password:</label>
+                <input type="password" name="password2" placeholder="repeat password">
               </div>
               <button class="btn btn__sign-up" type="submit" name="submit">Sign up for shop</button>
             </form>
