--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
           <div class="modal__dialog">
             <form class="login-form login-form__signin" action="/" method="post">
               <div class="form-group">
-                <label>Your Email</label>
-                <input type="email" name="email" placeholder="email">
+                <label>Your Email: *</label>
+                <input type="email" name="email" placeholder="email" required>
               </div>
               <div class="form-group">
-                <label>Your password:</label>
-                <input type="password" name="password" placeholder="password">
+                <label>Your password: *</label>
+                <input type="password" name="password" placeholder="password" required>
               </div>
               <button class="btn btn__sign-in" type="submit" name="submit">Sign in for shop</button>
             </form>
@@ -46,16 +46,16 @@
                 <input type="text" name="surname" placeholder="surname">
               </div>
               <div class="form-group">
-                <label>Your Email:</label>
-                <input type="email" name="email" placeholder="email">
+                <label>Your Email: *</label>
+                <input type="email" name="email" placeholder="email" required>
               </div>
               <div class="form-group">
-                <label>Your password:</label>
-                <input type="password" name="password" placeholder="password">
+                <label>Your password: *</label>
+                <input type="password" name="password" placeholder="password" required>
               </div>
               <div class="form-group">
-                <label>Repeat password:</label>
-                <input type="password" name="password2" placeholder="repeat password">
+                <label>Repeat password: *</label>
+                <input type="password" name="password2" placeholder="repeat password" required>
               </div>
               <button class="btn btn__sign-up" type="submit" name="submit">Sign up for shop</button>
             </form>
