--- a/index.html
+++ b/index.html
@@ -68,7 +68,83 @@
   </header>
 
   <main class="main">
-    <div class="container-fluid">
+
+    <div class="content">
+      <div class="content-header">
+        <ul class="content-list">
+          <li class="content-list__item">
+            <a class="content-list__link">#</a>
+          </li>
+          <li class="content-list__item">
+            <a class="content-list__link">Image</a>
+          </li>
+          <li id="nameFilter" class="content-list__item">
+            <a class="content-list__link" href="/">Name</a>
+          </li>
+          <li id="alcoholFilter" class="content-list__item">
+            <a class="content-list__link" href="/">Alcohol</a>
+          </li>
+          <li class="content-list__item">
+            <a class="content-list__link">Select</a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="content-body">
+        <ul class="card-list">
+          <li class="card-list__item">
+            <ul class="content-list">
+              <li class="content-list__item">
+                <a class="content-list__link">1</a>
+              <li class="content-list__item">
+                <a class="content-list__link">
+                  <img width="25" height="50" src="https://images.punkapi.com/v2/keg.png" alt="Buzz">
+                </a>
+              </li>
+              <li class="content-list__item">
+                <a class="content-list__link">Buzz</a>
+              <li class="content-list__item">
+                <a class="content-list__link">4.5</a>
+              </li>
+              <li class="content-list__item">
+                <a class="content-list__link">
+                  <input type="checkbox">
+                </a
+              </li>
+            </ul>
+          </li>
+
+          <li class="card-list__item">
+            <ul class="content-list">
+              <li class="content-list__item">
+                <a class="content-list__link">1</a>
+              <li class="content-list__item">
+                <a class="content-list__link">
+                  <img width="25" height="50" src="https://images.punkapi.com/v2/2.png" alt="Buzz">
+                </a>
+              </li>
+              <li class="content-list__item">
+                <a class="content-list__link">Buzz</a>
+              <li class="content-list__item">
+                <a class="content-list__link">4.5</a>
+              </li>
+              <li class="content-list__item">
+                <a class="content-list__link">
+                  <input type="checkbox">
+                </a
+              </li>
+            </ul>
+          </li>
+        </ul>
+
+      </div>
+
+      <div class="content-footer">
+        <div class="content-control ">
+          <button class="btn btn__second" id="loadMore" type="button">Load more</button>
+          <button class="btn btn__second" id="showSelected" type="button">Show selected</button>
+        </div>
+      </div>
 
     </div>
   </main>
