Added button - clear

--- a/index.html
+++ b/index.html
@@ -91,11 +91,12 @@
       </div>
 
       <div class="content-body">
-        <ul class="card-list">
+        <ul id="cardList" class="card-list">
           <li class="card-list__item">
             <ul class="content-list">
               <li class="content-list__item">
                 <a class="content-list__link">1</a>
+              </li>
               <li class="content-list__item">
                 <a class="content-list__link">
                   <img width="25" height="50" src="https://images.punkapi.com/v2/keg.png" alt="Buzz">
@@ -103,6 +104,7 @@
               </li>
               <li class="content-list__item">
                 <a class="content-list__link">Buzz</a>
+              </li>
               <li class="content-list__item">
                 <a class="content-list__link">4.5</a>
               </li>
@@ -118,6 +120,7 @@
             <ul class="content-list">
               <li class="content-list__item">
                 <a class="content-list__link">1</a>
+              </li>
               <li class="content-list__item">
                 <a class="content-list__link">
                   <img width="25" height="50" src="https://images.punkapi.com/v2/2.png" alt="Buzz">
@@ -125,16 +128,18 @@
               </li>
               <li class="content-list__item">
                 <a class="content-list__link">Buzz</a>
+              </li>
               <li class="content-list__item">
                 <a class="content-list__link">4.5</a>
               </li>
               <li class="content-list__item">
                 <a class="content-list__link">
                   <input type="checkbox">
-                </a
+                </a>
               </li>
             </ul>
           </li>
+
         </ul>
 
       </div>
@@ -143,6 +148,7 @@
         <div class="content-control ">
           <button class="btn btn__second" id="loadMore" type="button">Load more</button>
           <button class="btn btn__second" id="showSelected" type="button">Show selected</button>
+          <button class="btn btn__clear" id="clearSelected" type="button">Clear selected</button>
         </div>
       </div>
 
