Create component - CardList

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
       <div class="content-body">
         <ul id="cardList" class="card-list">
-          <li class="card-list__item">
+          <!-- <li class="card-list__item">
             <ul class="content-list">
               <li class="content-list__item">
                 <a class="content-list__link">1</a>
@@ -116,29 +116,7 @@
             </ul>
           </li>
 
-          <li class="card-list__item">
-            <ul class="content-list">
-              <li class="content-list__item">
-                <a class="content-list__link">1</a>
-              </li>
-              <li class="content-list__item">
-                <a class="content-list__link">
-                  <img width="25" height="50" src="https://images.punkapi.com/v2/2.png" alt="Buzz">
-                </a>
-              </li>
-              <li class="content-list__item">
-                <a class="content-list__link">Buzz</a>
-              </li>
-              <li class="content-list__item">
-                <a class="content-list__link">4.5</a>
-              </li>
-              <li class="content-list__item">
-                <a class="content-list__link">
-                  <input type="checkbox">
-                </a>
-              </li>
-            </ul>
-          </li>
+          -->
 
         </ul>
 
