Created Bag and fixed Modal

--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
       </div>
 
     </div>
+
+    <div id="modalBag" class="modal modal-bag">      
+    </div>
   </main>
 
   <script type="module" src="/js/main.js"></script>
