--- a/index.html
+++ b/index.html
@@ -10,57 +10,64 @@
 <body>
   <header class="header">
     <div class="container-fluid">
-      <div class="login">
-        <nav class="login__nav">
-          <button id="btnSignin" type="button" class="btn btn__sign-in">Sign in</button>
-          <button id="btnSignup" type="button" class="btn btn__sign-up">Sign up</button>
-        </nav>
-
-        <div id="modalSignin" class="modal">
-          <div class="modal__dialog">
-            <form class="login-form login-form__signin" action="/" method="post">
-              <div class="form-group">
-                <label>Your Email: *</label>
-                <input type="email" name="email" placeholder="email" required>
-              </div>
-              <div class="form-group">
-                <label>Your password: *</label>
-                <input type="password" name="password" placeholder="password" required>
-              </div>
-              <button class="btn btn__sign-in" type="submit" name="submit">Sign in for shop</button>
-            </form>
-
-            <button class="btn btn-close" type="button">&times;</button>
-          </div>
+      <div class="header-row">
+        <div class="logo">
+          <a href="/">
+            <img src="img/logo.jpg" alt="logo" width="30" height="30">
+          </a>
         </div>
+        <div class="login">
+          <nav class="login__nav">
+            <button id="btnSignin" type="button" class="btn btn__sign-in">Sign in</button>
+            <button id="btnSignup" type="button" class="btn btn__sign-up">Sign up</button>
+          </nav>
 
-        <div id="modalSignup" class="modal">
-          <div class="modal__dialog">
-            <form class="login-form login-form__signup" action="/" method="post">
-              <div class="form-group">
-                <label>Name:</label>
-                <input type="text" name="name" placeholder="name">
-              </div>
-              <div class="form-group">
-                <label>Surname</label>
-                <input type="text" name="surname" placeholder="surname">
-              </div>
-              <div class="form-group">
-                <label>Your Email: *</label>
-                <input type="email" name="email" placeholder="email" required>
-              </div>
-              <div class="form-group">
-                <label>Your password: *</label>
-                <input type="password" name="password" placeholder="password" required>
-              </div>
-              <div class="form-group">
-                <label>Repeat password: *</label>
-                <input type="password" name="password2" placeholder="repeat password" required>
-              </div>
-              <button class="btn btn__sign-up" type="submit" name="submit">Sign up for shop</button>
-            </form>
+          <div id="modalSignin" class="modal">
+            <div class="modal__dialog">
+              <form class="login-form login-form__signin" action="/" method="post">
+                <div class="form-group">
+                  <label>Your Email: *</label>
+                  <input type="email" name="email" placeholder="email" required>
+                </div>
+                <div class="form-group">
+                  <label>Your password: *</label>
+                  <input type="password" name="password" placeholder="password" required>
+                </div>
+                <button class="btn btn__sign-in" type="submit" name="submit">Sign in for shop</button>
+              </form>
 
-            <button class="btn btn-close" type="button">&times;</button>
+              <button class="btn btn-close" type="button">&times;</button>
+            </div>
+          </div>
+
+          <div id="modalSignup" class="modal">
+            <div class="modal__dialog">
+              <form class="login-form login-form__signup" action="/" method="post">
+                <div class="form-group">
+                  <label>Name:</label>
+                  <input type="text" name="name" placeholder="name">
+                </div>
+                <div class="form-group">
+                  <label>Surname</label>
+                  <input type="text" name="surname" placeholder="surname">
+                </div>
+                <div class="form-group">
+                  <label>Your Email: *</label>
+                  <input type="email" name="email" placeholder="email" required>
+                </div>
+                <div class="form-group">
+                  <label>Your password: *</label>
+                  <input type="password" name="password" placeholder="password" required>
+                </div>
+                <div class="form-group">
+                  <label>Repeat password: *</label>
+                  <input type="password" name="password2" placeholder="repeat password" required>
+                </div>
+                <button class="btn btn__sign-up" type="submit" name="submit">Sign up for shop</button>
+              </form>
+
+              <button class="btn btn-close" type="button">&times;</button>
+            </div>
           </div>
         </div>
       </div>
