--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
             <div id="nameFilter" class="content-list__item d-th">
               <a class="content-list__link" href="/">Name</a>
             </div>
+            <div class="content-list__item d-th">
+              <a class="content-list__link" href="/">Food pairing</a>
+            </div>
             <div id="alcoholFilter" class="content-list__item d-th">
               <a class="content-list__link" href="/">Alcohol</a>
             </div>
