Fixed rendering of the Bag

--- a/index.html
+++ b/index.html
@@ -113,6 +113,29 @@
     </div>
 
     <div id="modalBag" class="modal modal-bag">
+      <div class="modal__dialog">
+        <ul class="card-list d-table">
+          <li class="card-list__item content-list d-tr">
+            <div class="content-list__item d-th">
+              <a class="content-list__link">#</a>
+            </div>
+            <div class="content-list__item d-th">
+              <a class="content-list__link">Image</a>
+            </div>
+            <div class="content-list__item d-th">
+              <a class="content-list__link">Name</a>
+            </div>
+            <div class="content-list__item d-th">
+              <a class="content-list__link">Food pairing</a>
+            </div>
+            <div class="content-list__item d-th">
+              <a class="content-list__link">Alcohol</a>
+            </div>
+          </li>
+        </ul>
+
+        <button class="btn btn-close" type="button">&times;</button>
+      </div>
     </div>
   </main>
 
