Added filter for number and fixed food pairing

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
       <div class="content-body">
         <ul id="cardList" class="card-list d-table">
           <li class="card-list__item content-list d-tr">
-            <div class="content-list__item d-th">
-              <a class="content-list__link">#</a>
+            <div id="numberFilter" class="content-list__item d-th">
+              <a class="content-list__link" href="/">#</a>
             </div>
             <div class="content-list__item d-th">
               <a class="content-list__link">Image</a>
@@ -101,7 +101,7 @@
               <a class="content-list__link" href="/">Name</a>
             </div>
             <div class="content-list__item d-th">
-              <a class="content-list__link" href="/">Food pairing</a>
+              <a class="content-list__link">Food pairing</a>
             </div>
             <div id="alcoholFilter" class="content-list__item d-th">
               <a class="content-list__link" href="/">Alcohol</a>
