--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
               <div class="modal__body">
                 <form class="login-form login-form__signup" action="/" method="post">
                   <div class="form-group">
-                    <label>Name:</label>
-                    <input type="text" name="name" placeholder="name">
+                    <label>Name: *</label>
+                    <input type="text" name="name" placeholder="name" required>
                   </div>
                   <div class="form-group">
-                    <label>Surname</label>
-                    <input type="text" name="surname" placeholder="surname">
+                    <label>Surname: *</label>
+                    <input type="text" name="surname" placeholder="surname" required>
                   </div>
                   <div class="form-group">
                     <label>Your Email: *</label>
