--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
         </div>
       </div>
     </div>
+
+    <button id="closeHeeader" class="btn__close-header" type="button" name="button"></button>
   </header>
 
   <main class="main">
